--- a/src/main.css
+++ b/src/main.css
@@ -10,7 +10,8 @@
 }
 
 body {
-  font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Source Sans Pro", "Trebuchet MS", "Lucida Grande",
+    "Bitstream Vera Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   text-align: center;
   color: #293c4b;
@@ -21,6 +22,6 @@ h1 {
 }
 
 img {
-  margin: 20px 0;
+  /* margin: 20px 0; */
   max-width: 200px;
 }
