--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
-html, body{
+html,
+body {
   background-color: #111;
   text-align: center;
   color: white;
@@ -21,6 +22,7 @@ html, body{
 }
 
 .negative-toggle {
+  color: white;
   font-size: 5.5vh;
 }
 
@@ -29,6 +31,7 @@ html, body{
 }
 
 .total-row {
+  color: white;
   height: 10%;
   font-family: "Arial Black", sans-serif;
   font-size: 6vh;
@@ -69,7 +72,6 @@ html, body{
   touch-action: manipulation;
 }
 
-
 .winner {
   position: fixed;
   top: 50;
@@ -77,7 +79,6 @@ html, body{
   margin: 0 auto;
   height: 200px;
 }
-
 
 /* .left svg { */
 /*   position: absolute; */
@@ -99,6 +100,7 @@ html, body{
   font-family: "Arial Black", sans-serif;
   font-size: 9vh;
   vertical-align: top;
+  color: white;
 }
 
 .header-row div {
